[package]
name = "tokio-sunspec"
description = "Tokio-based SunSpec library"
version = "0.1.0"
edition = "2021"
authors = ["Lukas Kirner <lukas.kirner@gmail.com>"]
license = "Apache-2.0"
keywords = ["fieldbus", "sunspec", "modbus", "hardware", "automation"]
homepage = "https://github.com/lukaskirner/tokio-sunspec"
repository = "https://github.com/lukaskirner/tokio-sunspec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
tokio-modbus = { version = "0.7", default-features = false, features = ["tcp", "server", "tcp-server-unstable"] }
thiserror = "1.0.39"
