[package]
name = "tokio-sunspec"
description = "Tokio-based SunSpec library"
version = "0.2.2"
edition = "2021"
authors = ["Lukas Kirner <lukas.kirner@gmail.com>"]
license = "Apache-2.0"
keywords = ["fieldbus", "sunspec", "modbus", "hardware", "automation"]
homepage = "https://github.com/lukaskirner/tokio-sunspec"
repository = "https://github.com/lukaskirner/tokio-sunspec"

[package.metadata.docs.rs]
all-features = true

[dependencies]
thiserror = "1.0.38"
tokio-serial = { version = "5.4.4", optional = true, default-features = false }
tokio-modbus = { version = "0.7.1", optional = true, default-features = false, features = ["tcp", "rtu", "server", "tcp-server-unstable"] }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["time"] }

[features]
default = ["tcp", "rtu"]
tcp = ["tokio-modbus/tcp"]
rtu = ["tokio-modbus/rtu", "dep:tokio-serial"]

[[example]]
name = "sma-inverter"
path = "examples/sma-inverter.rs"
required-features = ["tcp"]

[[example]]
name = "meter"
path = "examples/meter.rs"
required-features = ["tcp"]
